--- a/sitestuf/moar/downloads/index.html
+++ b/sitestuf/moar/downloads/index.html
@@ -16,9 +16,9 @@
 <META property="og:url" content="https://www.rubberocket.com">
 <LINK REL="shortcut icon" CONTENT="/favicon.ico">
 <!-- InstanceEndEditable -->
-<!-- InstanceParam name="bgcolor" type="color" value="#FFCC00" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#0000EE" --><!-- InstanceParam name="vlink" type="color" value="#551A8B" --><!-- InstanceParam name="alink" type="color" value="#FF0000" --><!-- InstanceParam name="background" type="URL" value="" -->
+<!-- InstanceParam name="bgcolor" type="color" value="#009966" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#FFFFFF" --><!-- InstanceParam name="vlink" type="color" value="#FF6600" --><!-- InstanceParam name="alink" type="color" value="#FF33CC" --><!-- InstanceParam name="background" type="URL" value="" -->
 </HEAD>
-<BODY BACKGROUND="" BGCOLOR="#FFCC00" TEXT="#000000" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+<BODY BACKGROUND="" BGCOLOR="#009966" TEXT="#000000" LINK="#FFFFFF" VLINK="#FF6600" ALINK="#FF33CC">
 <!-- BEGIN HEADER -->
 <TABLE BORDER=0 CELLPADDING=5 WIDTH="100%">
 <TR>
@@ -52,9 +52,8 @@
 
 <!--START CONTENT-->
 <!-- InstanceBeginEditable name="content_farm" -->
-<p><font size="+5"><strong>:(</strong></font></p>
-<p><strong>Click the computer icon above to go home.</strong></p>
-<p><font size="-2">(If you couldn't tell by now, I still don't have an idea for this 404 page) </font></p>
+<h1>Downloads</h1>
+<p>&nbsp;</p>
 <!-- InstanceEndEditable --><BR>
 <!--END CONTENT-->
 
