--- a/sitestuf/moar/index.html
+++ b/sitestuf/moar/index.html
@@ -39,7 +39,7 @@ function MM_swapImage() { //v3.0
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="bgcolor" type="color" value="#000000" --><!-- InstanceParam name="text" type="color" value="#FFFFFF" --><!-- InstanceParam name="linkcolor" type="color" value="#00FFFF" --><!-- InstanceParam name="vlink" type="color" value="#FF00FF" --><!-- InstanceParam name="alink" type="color" value="#FF0000" --><!-- InstanceParam name="background" type="URL" value="" -->
 </HEAD>
-<BODY BGCOLOR="#000000" BACKGROUND="" TEXT="#FFFFFF" LINK="#00FFFF" VLINK="#FF00FF" ALINK="#FF0000" onLoad="MM_preloadImages('../resources/grfx/site/icons/lnktripoff/iarchive_hover.gif','../resources/grfx/site/icons/lnktripoff/github_hover.gif','../resources/grfx/site/icons/lnktripoff/oldshit_hover.gif','../resources/grfx/site/icons/lnktripoff/email_hover.gif')">
+<BODY BGCOLOR="#000000" BACKGROUND="" TEXT="#FFFFFF" LINK="#00FFFF" VLINK="#FF00FF" ALINK="#FF0000" onLoad="MM_preloadImages('../resources/grfx/site/icons/lnktripoff/iarchive_hover.gif','../resources/grfx/site/icons/lnktripoff/github_hover.gif','../resources/grfx/site/icons/lnktripoff/oldshit_hover.gif','../resources/grfx/site/icons/lnktripoff/downloads_hover.gif','../resources/grfx/site/icons/lnktripoff/email_hover.gif')">
 <!-- BEGIN HEADER -->
 <TABLE BORDER=0 CELLPADDING=5 WIDTH="100%">
 <TR>
@@ -56,7 +56,7 @@ function MM_swapImage() { //v3.0
 <!--START LINKS-->
 <TABLE>
 <TR ALIGN=LEFT VALIGN=TOP>
-<TD><A HREF="/index.html"><IMG SRC="/resources/grfx/site/icons/comp.gif" ALT="Home" TITLE="Home" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
+<TD><A HREF="/"><IMG SRC="/resources/grfx/site/icons/comp.gif" ALT="Home" TITLE="Home" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
 <TD><A HREF="/archive/art"><IMG SRC="/resources/grfx/site/icons/paint.gif" ALT="Art" TITLE="Art" BORDER=0 HEIGHT=32 WIDTH=32></A></TD>
 
@@ -73,8 +73,8 @@ function MM_swapImage() { //v3.0
 
 <!--START CONTENT-->
 <!-- InstanceBeginEditable name="content_farm" -->
-<h1 align="center">Outside Rubberocket</h1>
-<p align="center"><a href="https://archive.org/details/@idolztrulz" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('internetarchive','','../resources/grfx/site/icons/lnktripoff/iarchive_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/iarchive.gif" alt="The Internet Archive" name="internetarchive" width="87" height="81" border="0"></a><a href="https://github.com/rubberocket/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('github','','../resources/grfx/site/icons/lnktripoff/github_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/github.gif" alt="GitHub" name="github" width="87" height="81" border="0"></a><a href="../olddir/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('oldshit','','../resources/grfx/site/icons/lnktripoff/oldshit_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/oldshit.gif" alt="Old Stuff" name="oldshit" width="87" height="81" border="0"></a><a href="mailto:aleph@rubberocket.com" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('email','','../resources/grfx/site/icons/lnktripoff/email_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/email.gif" alt="Email Aleph!" name="email" width="87" height="81" border="0"></a></p>
+<h1 align="center">In-And-Out Rubberocket Fast Food </h1>
+<p align="center"><a href="https://archive.org/details/@idolztrulz" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('internetarchive','','../resources/grfx/site/icons/lnktripoff/iarchive_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/iarchive.gif" alt="The Internet Archive" name="internetarchive" width="87" height="81" border="0"></a><a href="https://github.com/rubberocket/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('github','','../resources/grfx/site/icons/lnktripoff/github_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/github.gif" alt="GitHub" name="github" width="87" height="81" border="0"></a><a href="olddir/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('oldshit','','../resources/grfx/site/icons/lnktripoff/oldshit_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/oldshit.gif" alt="Old Stuff" name="oldshit" width="87" height="81" border="0"></a><a href="downloads/" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('downloady','','../resources/grfx/site/icons/lnktripoff/downloads_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/downloads.gif" alt="Downloads" name="downloady" width="87" height="81" border="0"></a><a href="mailto:aleph@rubberocket.com" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('email','','../resources/grfx/site/icons/lnktripoff/email_hover.gif',1)"><img src="../resources/grfx/site/icons/lnktripoff/email.gif" alt="Email Aleph!" name="email" width="87" height="81" border="0"></a></p>
 <!-- InstanceEndEditable --><BR>
 <!--END CONTENT-->
 
