my. ass. is. heavy

--- a/sitestuf/moar/downloads/index.html
+++ b/sitestuf/moar/downloads/index.html
@@ -53,7 +53,11 @@
 <!--START CONTENT-->
 <!-- InstanceBeginEditable name="content_farm" -->
 <h1>Downloads</h1>
-<p>&nbsp;</p>
+<h2>Wallpapers</h2>
+<h3>Patterns</h3>
+<p><a href="wallpapers/patterns/asterisk.jpg" target="_blank">Asterisk</a> - This is from when the site first launched!</p>
+<h2>Posters</h2>
+<p><a href="wallpapers/posters/blastoff.jpg" target="_blank">Blastoff</a> (Old Version) - Also from when the site first launched, but this was there from the very beginning... <a href="https://raw.githubusercontent.com/rubberocket/older/8a1726141f0f61179e9133de35a14fbf18473b26/sitedir/images/promo/rocketlaunch_.png">I'm not even kidding.</a> </p>
 <!-- InstanceEndEditable --><BR>
 <!--END CONTENT-->
 
