--- a/sitestuf/moar/downloads/index.html
+++ b/sitestuf/moar/downloads/index.html
@@ -2,18 +2,15 @@
 <HEAD>
 <!-- InstanceBeginEditable name="meta tags" -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
 <META NAME="keywords" CONTENT="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
-<TITLE>rubberocket</TITLE>
-<LINK rel="canonical" href="https://www.rubberocket.com">
+<TITLE>downloads ::: rubberocket</TITLE>
+<LINK rel="canonical" href="https://www.rubberocket.com/moar/downloads/">
 <META property="og:type" content="website">
 <META NAME="description" 
-	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+	content="The downloads section of Rubberocket.com, where you can download images and stuff.">
 <META property="og:description" 
-	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
-<META NAME="keywords"
-	content="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
-<META property="og:url" content="https://www.rubberocket.com">
+	content="The downloads section of Rubberocket.com, where you can download images and stuff.">
+<META property="og:url" content="https://www.rubberocket.com/moar/downloads/">
 <LINK REL="shortcut icon" CONTENT="/favicon.ico">
 <!-- InstanceEndEditable -->
 <!-- InstanceParam name="bgcolor" type="color" value="#009966" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#FFFFFF" --><!-- InstanceParam name="vlink" type="color" value="#FF6600" --><!-- InstanceParam name="alink" type="color" value="#FF33CC" --><!-- InstanceParam name="background" type="URL" value="" -->
