--- a/sitestuf/404.html
+++ b/sitestuf/404.html
@@ -55,6 +55,7 @@
 <p><font size="+5"><strong>:(</strong></font></p>
 <p><strong>Click the computer icon above to go home.</strong></p>
 <p><font size="-2">(If you couldn't tell by now, I still don't have an idea for this 404 page) </font></p>
+<p>Coming from a search engine and looking for the art page? I still haven't made a new page for it, but <a href="/archive/art/">the old one can be found here</a>.</p>
 <!-- InstanceEndEditable --><BR>
 <!--END CONTENT-->
 
