--- a/sitestuf/moar/olddir/index.html
+++ b/sitestuf/moar/olddir/index.html
@@ -3,7 +3,7 @@
 <p><a href="/">(Looking for new stuff?)</a> </p>
 <h2><em>Noteworthy</em> Websites</h2>
 <h3>Old Versions of Rubberocket </h3>
-<p><strong><a href="http://web.archive.org/web/20240921013100/https://www.rubberocket.com/" target="_blank">Rubberocket as of September 21st, 2024</a> </strong></p>
+<p><strong><a href="/oldeyrocketo/" target="_blank">Rubberocket as of October 16th, 2024</a> </strong></p>
 <p><a href="http://rrkt.rf.gd/" target="_blank"><strong>Rubberocket as of August 24th 2024</strong></a> (This design lasted from May to August of that year! Amazing, I know! Hosted on InfinityFree, originally hosted on InstaFree. Strongly recommended if you want to make a personal website with PHP.)</p>
 <p><strong><a href="http://www.rubberocket.com/oldrocket/" target="_blank">Rubberocket as of March 3rd 2024</a> </strong></p>
 <p><a href="http://www.rubberocket.com/older/" target="_blank"><strong>Rubberocket as of February 26th 2024</strong></a><strong> </strong></p>
