Return of LICENSE file, added about page
And some other boring shit

--- a/sitestuf/about/index.html
+++ b/sitestuf/about/index.html
@@ -2,23 +2,21 @@
 <HEAD>
 <!-- InstanceBeginEditable name="meta tags" -->
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
-<META NAME="description" CONTENT="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
-<META NAME="keywords" CONTENT="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
-<TITLE>rubberocket</TITLE>
-<LINK rel="canonical" href="https://www.rubberocket.com">
+<TITLE>about ::: rubberocket</TITLE>
+<LINK rel="canonical" href="https://www.rubberocket.com/about/">
 <META property="og:type" content="website">
 <META NAME="description" 
-	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+	content="All about this whole website... this is very self-explanatory and I will not explain further. Sample text.">
 <META property="og:description" 
-	content="rubberocket.com: the website of Aleph Diallo. Always a work-in-progress and never finished for good. Contains art, animations, and more to come.">
+	content="All about this whole website... this is very self-explanatory and I will not explain further. Sample text.">
 <META NAME="keywords"
 	content="rubberocket, rubberocket.com, cartoons, animation, art, y2k, netscape, geocities, blah guy, upl, untitled public license, Aleph Diallo, Rubber Rocket, Nduru Diallo, NduruD, BadBunsen, Totally Object Show, Flash, macromedia, draw, sketches, cartoonist">
-<META property="og:url" content="https://www.rubberocket.com">
+<META property="og:url" content="https://www.rubberocket.com/about/">
 <LINK REL="shortcut icon" CONTENT="/favicon.ico">
 <!-- InstanceEndEditable -->
-<!-- InstanceParam name="bgcolor" type="color" value="#FFCC00" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#0000EE" --><!-- InstanceParam name="vlink" type="color" value="#551A8B" --><!-- InstanceParam name="alink" type="color" value="#FF0000" --><!-- InstanceParam name="background" type="URL" value="" -->
+<!-- InstanceParam name="bgcolor" type="color" value="#CCCCCC" --><!-- InstanceParam name="text" type="color" value="#000000" --><!-- InstanceParam name="linkcolor" type="color" value="#0000EE" --><!-- InstanceParam name="vlink" type="color" value="#551A8B" --><!-- InstanceParam name="alink" type="color" value="#FF0000" --><!-- InstanceParam name="background" type="URL" value="" -->
 </HEAD>
-<BODY BACKGROUND="" BGCOLOR="#FFCC00" TEXT="#000000" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
+<BODY BACKGROUND="" BGCOLOR="#CCCCCC" TEXT="#000000" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <!-- BEGIN HEADER -->
 <TABLE BORDER=0 CELLPADDING=5 WIDTH="100%">
 <TR>
@@ -52,10 +50,18 @@
 
 <!--START CONTENT-->
 <!-- InstanceBeginEditable name="content_farm" -->
-<p><font size="+5"><strong>:(</strong></font></p>
-<p><strong>Click the computer icon above to go home.</strong></p>
-<p><font size="-2">(If you couldn't tell by now, I still don't have an idea for this 404 page) </font></p>
-<p>Coming from a search engine and looking for the art page? I still haven't made a new page for it, but <a href="/archive/art/">the old one can be found here</a>.</p>
+<h1>What is Rubberocket? </h1>
+<p>Simply put: Rubberocket.com is the website you're currently viewing!</p>
+<h1>Why is Rubberocket?</h1>
+<p>Rubberocket.com was created to archive and host Aleph Diallo's (that would be me) old and new projects. Whether it be horrendous Flash animations, Cartoon Network-esque drawings or even being out-of-touch with society, if it's attached to Aleph, it's here in some form.</p>
+<h1>How is Rubberocket (made)?</h1>
+<p>Rubberocket is made with Netscape Navigator 3.0 in mind. The code is made through an ancient version of Adobe Dreamweaver, with the logo being created in Adobe Illustrator and other graphics being created with a mixture of Macromedia Fireworks, Adobe Animate, GIMP and Inkscape. Coding is mainly done on an early 2008 iMac with Windows 10 installed.</p>
+<h1>When was Rubberocket launched?</h1>
+<p>Rubberocket.com was  purchased on October 23rd, 2023, but the website didn't launch until 2 days later.</p>
+<h1>Who is Rubberocket?</h1>
+<p>Rubberocket is Aleph Diallo. As if it wasn't clear enough.</p>
+<h1>Where is Rubberocket?</h1>
+<p>Somewhere in New York. Server-wise, deep within the trenches called GitHub Pages. </p>
 <!-- InstanceEndEditable --><BR>
 <!--END CONTENT-->
 
