--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -26,12 +26,7 @@
 </TABLE>
 <!--one of many sacred netscape rituals-->
 <CENTER><TABLE BORDER=0 CELLPADDING=5 WIDTH="320" HEIGHT="64" >
-<CAPTION>
-<CENTER><!--START LINKS--></CENTER>
-
-<CENTER><!--END LINKS--></CENTER>
-</CAPTION>
-
+<!--START LINKS-->
 <TR ALIGN=CENTER VALIGN=TOP>
 <TD><A HREF="index.html"><IMG SRC="resources/grfx/site/icons/comp.gif" ALT="The home icon is a computer." BORDER=0 HEIGHT=64 WIDTH=64></A><A HREF="index.html">
 <B><FONT FACE="Arial, Helvetica, sans-serif">Home</FONT></B></A><B><FONT FACE="Arial, Helvetica, sans-serif">&nbsp;</FONT></B></TD>
@@ -42,11 +37,12 @@
 <TD><A HREF="archive/videos/"><IMG SRC="resources/grfx/site/icons/projector.gif" ALT="The videos icon is a movie projector." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/videos/">Videos</A>&nbsp;</FONT></B></TD>
 
-<TD><A HREF="archive/about/"><IMG SRC="resources/grfx/site/icons/users.gif" ALT="The about icon shows two heads." BORDER=0 HEIGHT=64 WIDTH=64></A>
+<TD><A HREF="/about/"><IMG SRC="resources/grfx/site/icons/users.gif" ALT="The about icon shows two heads." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/about/">About</A>&nbsp;</FONT></B></TD>
 
 <TD><A HREF="/moar/"><IMG SRC="resources/grfx/site/icons/links.gif" ALT="The links icon shows a mouse cursor over a globe." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="moar/">Links</A>&nbsp;</FONT></B></TD>
+<!--END LINKS-->
 </TR>
 </TABLE></CENTER>
 
@@ -78,11 +74,14 @@ here to see it!</A>
 
 <CENTER><FONT SIZE=-1>Copyright &copy; Aleph Diallo.</FONT></CENTER>
 
-<CENTER><FONT SIZE=-1>Site code licensed under the BSD 3-Clause License.</FONT></CENTER>
+<CENTER><FONT SIZE=-1><a href="https://github.com/rubberocket/rubberocket.github.io" target="_blank">Site code</a> licensed under the <a href="https://opensource.org/license/BSD-3-clause" target="_blank">BSD 3-Clause License</a>.</FONT>
+</CENTER>
 
-<CENTER><FONT SIZE=-1>Site assets, excluding Windows 98 icons and other
-copyrighted works not by Aleph Diallo licensed under the <A HREF="archive/upl/LICENSE.txt" target="_blank">Untitled
-Public License</A>.</FONT></CENTER>
+<CENTER>
+  <FONT SIZE=-1>Site assets, excluding Windows 98 icons and other
+copyrighted works not by Aleph Diallo, are licensed under the <A HREF="archive/upl/LICENSE.txt" target="_blank">Untitled
+Public License</A>.</FONT>
+</CENTER>
 <!--END FOOTER-->
 </BODY>
 </HTML>
