--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -38,7 +38,7 @@
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/videos/">Videos</A>&nbsp;</FONT></B></TD>
 
 <TD><A HREF="/about/"><IMG SRC="resources/grfx/site/icons/users.gif" ALT="The about icon shows two heads." BORDER=0 HEIGHT=64 WIDTH=64></A>
-<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="archive/about/">About</A>&nbsp;</FONT></B></TD>
+<B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="/about/">About</A>&nbsp;</FONT></B></TD>
 
 <TD><A HREF="/moar/"><IMG SRC="resources/grfx/site/icons/links.gif" ALT="The links icon shows a mouse cursor over a globe." BORDER=0 HEIGHT=64 WIDTH=64></A>
 <B><FONT FACE="Arial, Helvetica, sans-serif"><A HREF="moar/">Links</A>&nbsp;</FONT></B></TD>
