--- a/sitestuf/index.html
+++ b/sitestuf/index.html
@@ -65,9 +65,8 @@
 		<div class="righty">
 		<!-- now for the content -->
 		<h1>Homepage</h1>
-		<font size="+3">BREAKING NEWS: SITE UNDER CONSTRUCTION ONCE AGAIN!</font>
-		<p>In other news: Christmas! Just 24 days away!</p>
-		<img src="resources/graphics/gifs/dancingblackman.gif" width="256">		</div>
+		i forgot to mention: there's <a href="/archive/">an archive</a> for older stuff! Go and check that out.
+		</div>
 		</div>
 	</body>
 
