--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: main
 title: Rubberocket
 keywords: "rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, cartoons, cartooning, artist, static, html, geocities, y2k"
 description: "The website of Aleph Diallo, established October 25th 2023 and still in search of a good design."
