--- a/about/index.html
+++ b/about/index.html
@@ -1,91 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
+---
+layout: main
+title: about ::: Rubberocket
+keywords: "about, rubberocket, rubberocket.com, aleph diallo, face reveal, what is this place, where am i, blah guy, all, will, be, revealed, about, the, rubber, rocket, or, rockets, if, you, prefer, who, still, uses, these, in, html, question mark, exclamation point, period"
+description: '"Just what the hell am I looking at?!" I hear you ask. This will be answered here. Trust me.'
+---
 
-		<link rel="icon" type="image/x-icon" href="../favicon.ico"> <!-- icon for browsers, next to title -->
-		<title>about ::: Rubberocket</title>
-
-		<!--embed and search engine metadata-->
-		<meta property="og:title" content="All about Rubberocket dot com"> <!-- title -->
-		<meta property="og:description" content='"Just what the hell am I looking at?!" I hear you ask. This will be answered here. Trust me.'><!-- description -->
-		<meta name="description" content='"Just what the hell am I looking at?!" I hear you ask. This will be answered here. Trust me.'> <!-- description for search engines that suck ass -->
-		<meta property="og:url" content="https://www.rubberocket.com/about"> <!-- the other canonical -->
-		<link rel="canonical" href="https://www.rubberocket.com/about/"> <!-- THE canonical -->
-		<link rel="stylesheet" href="../resources/stylesheets/global.css">
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive web design -->
-
-	</head>
-
-	<body>
-
-		<div class="container">
-		
-		<div class="mobile_header">
-
-		<a href="#" onClick="menuIt(); return false;"><img src="/resources/graphics/branding/rrkt_wordmark_sitesquare.gif" class="mobilemenuicon" alt="Rubberocket icon" width="64" height="64"></a>
-
-		<div class="mobilemenulinks" style="display: none;" id="mobilemenulinks">
-				<a href="/" onMouseOver="this.innerHTML='home &larrhk;'" onMouseOut="this.innerHTML='home'">home</a><br>
-				<a href="/art/" onMouseOver="this.innerHTML='art &larrhk;'" onMouseOut="this.innerHTML='art'">art</a><br>
-				<a href="/video/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
-				<a href="/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
-				<a href="/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
-				<a href="/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>
-		</div>
-
-		<script>
-			function menuIt() {
-			  var x = document.getElementById("mobilemenulinks");
-			  if (x.style.display === "block") {
-				x.style.display = "none";
-			  } else {
-				x.style.display = "block";
-			  }
-			}
-		</script>
-		</div>
-		
-		<div class="lefty">
-		<!-- start right part -->
-		<div class="linksection">
-		<a href="/" onMouseOver="this.innerHTML='home &larrhk;'" onMouseOut="this.innerHTML='home'">home</a><br>
-		<a href="/art/" onMouseOver="this.innerHTML='art &larrhk;'" onMouseOut="this.innerHTML='art'">art</a><br>
-		<a href="/video/" onMouseOver="this.innerHTML='video &larrhk;'" onMouseOut="this.innerHTML='video'">video </a><br>
-		<a href="/blog/" onMouseOver="this.innerHTML='blog &larrhk;'" onMouseOut="this.innerHTML='blog'">blog </a><br>
-		<a href="/about/" onMouseOver="this.innerHTML='about &larrhk;'" onMouseOut="this.innerHTML='about'">about </a><br>
-		<a href="/links/" onMouseOver="this.innerHTML='links &larrhk;'" onMouseOut="this.innerHTML='links'">links </a>		</div>
-		
-		<div class="logo">
-		  <p><img src="../resources/graphics/branding/rrkt_wordmark_siterect.gif" width="486" height="68" alt="Rubberocket wordmark"></p>
-		</div>
-		<!-- end left part -->	
-		</div>
-		
-		<div class="righty">
-		<!-- now for the content -->
-		<h1>What is Rubberocket? </h1>
-			<p>Simply put: Rubberocket.com is the website you're currently viewing!</p>
-		<h1>Why is Rubberocket?</h1>
-			<p>Rubberocket.com was created to archive and host Aleph Diallo's (that would be me) old and new projects. Whether it be horrendous Flash animations, Cartoon Network-esque drawings or even being out-of-touch with society, if it's attached to Aleph, it's here in some form.</p>
-		<h1>How is Rubberocket (made)?</h1>
-			<p>Rubberocket's code is mainly done on an early 2008 iMac with Windows 10 installed.
-			<br>Here's a list of software that's used to make the site, and not any of the content on it:
-			<br>
-			<ul>
-			<li>Macromedia Dreamweaver for coding</li>
-			<li>Macromedia Fireworks for a <em>LOT</em> of the site's graphics</li>
-			<li>Pale Moon to preview the site</li>
-			<li>Git to put everything out there</li>
-			</ul>
-			<br>The code for this site is licensed under the BSD 3-Clause License, since people are probably going to copy and paste the source code from this site anyway. <a href="https://github.com/rubberocket/rubberocket.github.io" target="_blank">The GitHub repository can be found here</a>.</p>
-		<h1>When was Rubberocket launched?</h1>
-			<p>Rubberocket.com was  purchased on October 23rd, 2023, but the website didn't launch until 2 days later.</p>
-		<h1>Who is Rubberocket?</h1>
-			<p>Rubberocket is Aleph Diallo. As if it wasn't clear enough.</p>
-		<h1>Where is Rubberocket?</h1>
-			<p>Somewhere in New York. Server-wise, deep within the trenches called GitHub Pages. </p>
-		</div>
-	</body>
-
-</html>
+<h1>What is Rubberocket? </h1>
+<p>Simply put: Rubberocket.com is the website you're currently viewing!</p>
+<h1>Why is Rubberocket?</h1>
+<p>Rubberocket.com was created to archive and host Aleph Diallo's (that would be me) old and new projects. Whether it be horrendous Flash animations, Cartoon Network-esque drawings or even being out-of-touch with society, if it's attached to Aleph, it's here in some form.</p>
+<h1>How is Rubberocket (made)?</h1>
+<p>Rubberocket's code is mainly done on an early 2008 iMac with Windows 10 installed.
+<br>Here's a list of software that's used to make the site, and not any of the content on it:
+<br>
+<ul>
+<li>Macromedia Dreamweaver for coding</li>
+<li>Macromedia Fireworks for a <em>LOT</em> of the site's graphics</li>
+<li>Pale Moon to preview the site</li>
+<li>Git to put everything out there</li>
+</ul>
+<br>The code for this site is licensed under the BSD 3-Clause License, since people are probably going to copy and paste the source code from this site anyway. <a href="https://github.com/rubberocket/rubberocket.github.io" target="_blank">The GitHub repository can be found here</a>.</p>
+<h1>When was Rubberocket launched?</h1>
+<p>Rubberocket.com was  purchased on October 23rd, 2023, but the website didn't launch until 2 days later.</p>
+<h1>Who is Rubberocket?</h1>
+<p>Rubberocket is Aleph Diallo. As if it wasn't clear enough.</p>
+<h1>Where is Rubberocket?</h1>
+<p>Somewhere in New York. Server-wise, deep within the trenches called GitHub Pages. </p>
+<h1>Will you show your face?</h1>
+<p>I mean I did a self portrait so I might, I don't know</p>
