--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: main
-title: about ::: Rubberocket
+title: "about ::: Rubberocket"
 keywords: "about, rubberocket, rubberocket.com, aleph diallo, face reveal, what is this place, where am i, blah guy, all, will, be, revealed, about, the, rubber, rocket, or, rockets, if, you, prefer, who, still, uses, these, in, html, question mark, exclamation point, period"
 description: "Just what the hell am I looking at? This is a question you're probably thinking of. All will be revealed here."
 ---
