--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,8 @@ description: "Just what the hell am I looking at? This is a question you're prob
 <p>Simply put: Rubberocket.com is the website you're currently viewing!</p>
 <h1>Why is Rubberocket?</h1>
 <p>Rubberocket.com was created to archive and host Aleph Diallo's (that would be me) old and new projects. Whether it be horrendous Flash animations, Cartoon Network-esque drawings or even being out-of-touch with society, if it's attached to Aleph, it's here in some form.</p>
+<h1>Where can I contact you?</h1>
+<p>aleph [at] rubberocket [dot] com.</p>
 <h1>How is Rubberocket (made)?</h1>
 <p>Rubberocket's code is mainly done on an early 2008 iMac with Windows 10 installed.
 <br>Here's a list of software that's used to make the site, and not any of the content on it:
