--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ keywords: "rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, c
 description: "The website of Aleph Diallo, established October 25th 2023 and still in search of a good design."
 ---
 <h1>Homepage</h1>
+<p>
 <video width="320" height="240" controls>
 	<source src="/resources/videos/memes/pipe.mp4" type="video/mp4">
 </video>
+</p>
+<p>Can you believe it guys?! Christmas! Just <strike>a week</strike> a day less than two weeks away</p>
