--- a/art/index.html
+++ b/art/index.html
@@ -1,8 +1,8 @@
 ---
 layout: main
-title: Rubberocket
+title: art ::: Rubberocket
 keywords: "rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, cartoons, cartooning, artist, static, html, geocities, y2k"
-description: "The website of Aleph Diallo, established October 25th 2023 and still in search of a good design."
+description: "Rubberocket art page! It's full of all sorts of wonder things... at least wonderful to me"
 ---
 <!-- stylesheet -->
 
