--- a/art/index.html
+++ b/art/index.html
@@ -2,7 +2,7 @@
 layout: main
 title: art ::: Rubberocket
 keywords: "rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, cartoons, cartooning, artist, static, html, geocities, y2k"
-description: "Rubberocket art page! It's full of all sorts of wonder things... at least wonderful to me"
+description: "The Rubberocket art page, full of all sorts of wonder things... at least wonderful to me"
 ---
 <!-- stylesheet -->
 
