i am such a tool

--- a/art/index.html
+++ b/art/index.html
@@ -1,6 +1,6 @@
 ---
 layout: main
-title: art ::: Rubberocket
+title: "art ::: Rubberocket"
 keywords: "rubberocket, rubberocket.com, Aleph Diallo, NduruD, art, animation, cartoons, cartooning, artist, static, html, geocities, y2k"
 description: "The Rubberocket art page, full of all sorts of wonder things... at least wonderful to me"
 ---
