--- a/index.html
+++ b/index.html
@@ -6,8 +6,5 @@ description: "The website of Aleph Diallo, established October 25th 2023 and sti
 ---
 <h1>Homepage</h1>
 <p>
-<video width="320" height="240" controls>
-	<source src="/resources/videos/memes/pipe.mp4" type="video/mp4">
-</video>
+We only have 3 days to go!!! <font size="+3"><strong>Now where the fuck is the new Adobe Animate version!?!?!?</strong></font>
 </p>
-<p>Can you believe it guys?! Christmas! Just <strike>a week</strike> a day less than two weeks away</p>
