--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ description: "The website of Aleph Diallo, established October 25th 2023 and sti
 ---
 <h1>Homepage</h1>
 <p>
-We only have 3 days to go!!! <font size="+3"><strong>Now where the fuck is the new Adobe Animate version!?!?!?</strong></font>
+Sample text.
 </p>
