--- a/sitedir/home.html
+++ b/sitedir/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 	<head>
-		<title>Aleph's Website (formerly rubberocket.com)</title>
-
-		<!-- seo stuff -->
+	<!-- InstanceBeginEditable name="doctitle" -->
+	<title>Home ::: Aleph's Website</title>
+	<!-- InstanceEndEditable -->
+	<!-- seo stuff -->
 		<meta name="title" content="The Homepage of Aleph's Website">
 
 		<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
@@ -21,15 +22,94 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<!-- end seo stuff -->
 
+		<link rel="stylesheet" href="media/styles/main.css">
+		
+		<style>
+		body {
+		background: #000;
+		}
+		</style>
+
+	    <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 	</head>
 
 	<body>
-	I'm not done yet! 
 		
-		<!--<div align='center'>
-		<img src='https://www.free-website-hit-counter.com/zc.php?d=9&id=3128&s=1' border='0' alt='Hit counter.'>
-		</div>-->
+		<div class="mainbox">
+
+		<nav>
+		<!-- header (not to be confused with an article header!) -->
+		<div class="header" id="header">
+		
+		<!-- banner -->
+		<picture>
+		<source srcset="media/sitegrfx/main/thumbwlogo.svg" alt="Aleph's Website Thumbs Up" class="header_img">
+		<img src="media/sitegrfx/main/thumbwlogo.png" alt="Aleph's Website Thumbs Up" class="header_img">
+		</picture>
+		<!-- end banner -->
+		
+		<!-- wordmark for smaller screens -->
+		<picture>
+		<source srcset="media/logos/aw_wordmark.svg" alt="Aleph's Website" class="header_wordmark">
+		<img src="media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
+		</picture>
+		
+		<div class="header_links"><a href="/home.html">HOME</a> <a href="/art/">ART</a> <a href="/videos/">VIDEOS</a> <a href="/games/">GAMES</a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
+		<!-- cool line-->
+		<img src="media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
+		</div>
+		<!--end header-->
+		</nav>
+
+		<hr>
+
+		<!-- under construction -->
+		<p align="center"><img src="media/gifsfromgeocities/construction.gif" alt="This site is under construction. Come back often." class="pixelme"></p>
+		
+		<hr>
+
+		<main>
+		<div class="main">
+
+		<!-- your content goes here... -->
+		<div class="main_content">
+		<!-- InstanceBeginEditable name="main_content" -->
+			And... I'm still not done. Happy new year, though.<br>
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+		<!-- InstanceEndEditable -->
+		</div>
+		<!-- your content dies here. -->
+		
+		<!-- sideabr -->
+		<div class="main_thebar">
+		<!-- InstanceBeginEditable name="main_thebar" -->
+			This is a placeholder.
+		<!-- InstanceEndEditable -->
+		</div>
+		<!-- end sideabr -->
+
+		</div>
+		</main>
+
+
+		<div class="footer">
+		<hr>
+
+		Copyright &copy 2022-{YEAR HERE} Aleph Diallo. Some content may be licensed under the Creative Commons.
+
+		<hr>
+		
+		<!--the buttons-->
+		<img src="media/buttons/aleph8831.gif" alt="Aleph's Website button">
+		<a href="https://www.archive.org" target="_blank"><img src="media/buttons/internetarchive.gif" alt="Visit the Internet Archive!"></a>
+		<img src="media/buttons/mwm_dw_88x31.gif" alt="Code made with Macromedia Dreamweaver">
+		<img src="media/buttons/mwm_fw_88x31.gif" alt="Graphics made with Macromedia Fireworks">
+		<img src="media/buttons/made_with_windows.gif" alt="Made with Windows">
+		<img src="media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)">
+
+		</div>
+		</div>
 
 	</body>
 
-</html>
+<!-- InstanceEnd --></html>
