--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,145 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 	<head>
-		<title>Aleph's Website (formerly rubberocket.com)</title>
+	<!-- InstanceBeginEditable name="doctitle" -->
+	<title>Aleph's Website</title>
+	<!-- InstanceEndEditable -->
 
-		<!-- seo stuff -->
-		<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
+	<!-- seo stuff -->
+		<!-- InstanceBeginEditable name="SEOSTUF" -->
+			<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
+	
+			<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
+	
+			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
+	
+			<meta name="robots" content="index, follow">
+	
+			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+			<meta name="language" content="English">
+	
+			<meta name="author" content="Aleph Diallo">
+			
+			<link rel="shortcut icon" href="favicon.ico">
+		<!-- InstanceEndEditable -->	
+	<!-- end seo stuff -->
 
-		<meta name="description" content="Aleph Diallo (that would be me) and his very own website. Contains art, animations, and a some other stuff that you can see for yourself by entering.">
+	<link rel="stylesheet" href="/media/styles/main.css">
 
-		<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
-
-		<meta name="robots" content="index, follow">
-
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta name="language" content="English">
-
-		<meta name="author" content="Aleph Diallo">
-		
-		<link rel="shortcut icon" href="favicon.ico">
-		<!-- end seo stuff -->
-
-		<!-- it only applies to this page so it doesn't really matter -->
-		<style>
-		body {
-		background: #000000 url("media/sitegrfx/splash/background.gif");
-		color: #ffffff;
-		width: 100%;
-		height: 100%;
-		position: fixed;
-		display: block;
-		top: 0;
-		left: 0;
-		font-family: Arial, Helvetica, sans-serif;
-		}
-
-		.splashbox {
-		width: 620px;
-		margin: auto;
-		background: #ffffff; 
-		color: #000000;
-		overflow: scroll;
-		}
-
-		/* wordmark */
-		.aw_logo {
-		width: 500px;
-		margin: -1px;
-		}
-		
-		/* splash */
-		.splashscrn {
-		width: 620px;
-		image-rendering: pixelated;
-		border-bottom: solid 5px #000000;
-		}
-		
-		/* mobile ver. */
-		
-	@media only screen and (max-width: 767px) {
-		.splashbox {
-		margin: 0 auto;
-		position: fixed;
-		top: 0;
-		left: 0;
-		display: block; 
-		width: 100%;
-		height: 100%;
-		}
-		.aw_logo {
-		width: 100%;
-		}
-		.splashscrn {
-		width: 100%;
-		}
+	<!-- InstanceBeginEditable name="restofthehead" -->
+	<style>
+	body {
+	background: #000;
 	}
-	@media only screen and (min-width: 768px) {
-		.splashbox {
-		border: 5px solid black;
-		}
-		.splashscrn {
-		height: 439px;
-		}
-	}
-		</style>
+	</style>
+	<!-- InstanceEndEditable -->
 	</head>
 
 	<body>
-		<div class="splashbox">
+	
+		<div class="mainbox">
 
-		<!-- logo -->
-		<picture>
-		<source srcset="media/logos/aw_wordmark.svg" class="aw_logo">
-		<img src="media/logos/aw_wordmark.png" class="aw_logo"> <!--fallback-->
-		</picture>
-
-		<hr>
-		<!-- requirements -->
-		<p><strong>This site requires</strong>: Some sort of computer <small>(you're looking at one right now)</small> and keen eyes</p>
-
-
-		<!-- get straight to the point -->
-
-		<div align="right">
-		<a href="home.html"><img src="media/sitegrfx/splash/splash.png" width="620" class="splashscrn" alt="click here to enter"></a>
-		</div>
-
-		<!-- boring -->
-
-		<h1>Some context before you enter (if you need it).</h1>
-
-		<p>
-		Welcome to Aleph's Website! <small>(formerly rubberocket.com)</small>
-		It's brimming with art, animations, videos, (possibly) games, and the rest... whatever those were.
-		</p>
-
-		<p>
-		If you're looking for rubberocket, this is essentially the same place, right down to the URL. However, if 
-		you're really craving the old design, then I have the next best thing in the 
-		<a href="https://www.rubberocket.com/archive/" target="_blank">/archive/</a> directory.
-		</p>
-
-		<p>
-		Ready? <a href="home.html">Enter, and enjoy your stay</a>. There might even be something you'd like here. Otherwise, you might be better off going outside. Seriously, take a break from the internet sometime.
-		</p>
-
-		<hr>
-
-		<div align="center">
-		<!-- obligatory 88x31 buttons -->
+		<nav>
+		<!-- header (not to be confused with an article header!) -->
+		<div class="header" id="header">
 		
+		<!-- banner -->
+		<picture>
+		<source srcset="media/sitegrfx/main/thumbwlogo.svg" alt="Aleph's Website Thumbs Up" class="header_img">
+		<img src="media/sitegrfx/main/thumbwlogo.png" alt="Aleph's Website Thumbs Up" class="header_img">
+		</picture>
+		<!-- end banner -->
+		
+		<!-- wordmark for smaller screens -->
+		<picture>
+		<source srcset="media/logos/aw_wordmark.svg" alt="Aleph's Website" class="header_wordmark">
+		<img src="media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
+		</picture>
+		
+		<div class="header_links"><a href="/">HOME</a> <a href="/art/">ART</a> <a href="/videos/">VIDEOS</a> <a href="/games/">GAMES</a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
+		<!-- cool line-->
+		<img src="media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
+		</div>
+		<!--end header-->
+		</nav>
+
+		<hr>
+
+		<!-- under construction -->
+		<p align="center"><img src="media/gifsfromgeocities/construction.gif" alt="This site is under construction. Come back often." class="pixelme"></p>
+		
+		<hr>
+
+		<main>
+		<div class="main">
+
+		<!-- your content goes here... -->
+		<div class="main_content">
+		<!-- InstanceBeginEditable name="main_content" -->
+			And... I'm still not done. Happy new year, though.<br>
+			<iframe width="314" height="321" scrolling="no" border="0"  
+		src="https://gifypet.neocities.org/pet/pet.html?name=the%20Blah%20Guy&dob=1735674906&gender=f&element=Earth&pet=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fblahpet.gif&map=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fmap.gif&background=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fspacers%2Fblackpixel.png&tablecolor=white&textcolor=white">
+		<!--useless fallback-->
+		<embed width="314" height="321" scrolling="no" border="0"
+		src="https://gifypet.neocities.org/pet/pet.html?name=the%20Blah%20Guy&dob=1735674906&gender=f&element=Earth&pet=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fblahpet.gif&map=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fmap.gif&background=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fspacers%2Fblackpixel.png&tablecolor=white&textcolor=white">
+		</embed>
+		<!--end fallback-->
+		</iframe>
+		<noscript>pretend there's a functioning tamagotchi above this string of text.</noscript>
+		<!-- InstanceEndEditable -->
+		</div>
+		<!-- your content dies here. -->
+		
+		<!-- sideabr -->
+		<div class="main_thebar">
+		<!-- InstanceBeginEditable name="main_thebar" -->
+			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+		<!-- InstanceEndEditable -->
+		</div>
+		<!-- end sideabr -->
+
+		</div>
+		</main>
+
+
+		<div class="footer">
+		<hr>
+
+		Copyright &copy 2022-{YEAR HERE} Aleph Diallo. Some content may be licensed under the Creative Commons.
+
+		<hr>
+		
+		<!--the buttons-->
 		<img src="media/buttons/aleph8831.gif" alt="Aleph's Website button">
+		<a href="https://www.archive.org" target="_blank"><img src="media/buttons/internetarchive.gif" alt="Visit the Internet Archive!"></a>
 		<img src="media/buttons/mwm_dw_88x31.gif" alt="Code made with Macromedia Dreamweaver">
 		<img src="media/buttons/mwm_fw_88x31.gif" alt="Graphics made with Macromedia Fireworks">
 		<img src="media/buttons/made_with_windows.gif" alt="Made with Windows">
-		<img src="media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)">		
+		<img src="media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)">
 
 		</div>
-
 		</div>
 
 	</body>
 
-</html>
+<!-- InstanceEnd --></html>
