--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><!-- InstanceBegin template="/Templates/Main Template.dwt" codeOutsideHTMLIsLocked="false" -->
 
 	<head>
-	<!-- TemplateBeginEditable name="doctitle" -->
-	<title>Home ::: Aleph's Website</title>
-	<!-- TemplateEndEditable -->
+	<!-- InstanceBeginEditable name="doctitle" -->
+	<title>About ::: Aleph's Website</title>
+	<!-- InstanceEndEditable -->
 
 	<!-- seo stuff -->
-		<!-- TemplateBeginEditable name="SEOSTUF" -->
-			<meta name="title" content="Aleph's Website: Cartoons, Animations and more!">
+		<!-- InstanceBeginEditable name="SEOSTUF" -->
+			<meta name="title" content="(Almost) All About Aleph Diallo">
 	
-			<meta name="description" content="The main homepage for Aleph's Website. Come on in and see the sights or however the saying goes.">
+			<meta name="description" content="A bunch of stuff (depending on how you view the word bunch) about the webmaster of this very site, Aleph Diallo.">
 	
 			<meta name="keywords" content="rubberocket, rubberocket.com, Aleph Diallo, Aleph's Website, alephdfilms, rubber rocket, Rubber Rocket, rubberrocket, RubberRocket Studios, Cartoons, Animations, Art, Videos, Games, Downloads">
 	
@@ -22,18 +22,18 @@
 			<meta name="author" content="Aleph Diallo">
 			
 			<link rel="shortcut icon" href="/favicon.ico">
-		<!-- TemplateEndEditable -->	
+		<!-- InstanceEndEditable -->	
 	<!-- end seo stuff -->
 
 	<link rel="stylesheet" href="/media/styles/main.css">
 
-	<!-- TemplateBeginEditable name="restofthehead" -->
+	<!-- InstanceBeginEditable name="restofthehead" -->
 	<style>
 	body {
 	background: #000;
 	}
 	</style>
-	<!-- TemplateEndEditable -->
+	<!-- InstanceEndEditable -->
 	</head>
 
 	<body>
@@ -76,17 +76,32 @@
 
 		<!-- your content goes here... -->
 		<div class="main_content">
-		<!-- TemplateBeginEditable name="main_content" -->
-			This is a placeholder.
-		<!-- TemplateEndEditable -->
+		<!-- InstanceBeginEditable name="main_content" -->
+		<h1>Where am I?	      </h1>
+		<p>This is Aleph's Website. That is clear. It was also formerly called <a href="/archive/">Rubberocket</a> (just like the domain!), but then I got bored, so now it's Aleph's Website! <em>Again!!</em> </p>
+		<h1>Who are you?</h1>
+		<p>I'm Aleph Diallo. I like drawing.</p>
+		<h1>Where can I contact you?</h1>
+		<p>The best way to contact me is through email:</p>
+		<p>aleph at rubberocket dot com</p>
+		<h1>Why did you make Aleph's Website?</h1>
+		<p>First, it was boredom. Then, it was so that I could show what I've done over the years to the public, no matter how bad it would be.</p>
+		<h1>What do you like?</h1>
+		<p>Rock music (a big one is Blur but there's also Radiohead, Pixies, Nirvana and Oasis), cartoons (e.g. Superjail, Moral Orel, Foster's Home, Happy Tree Friends, etc.), animals (cats, dogs, monkeys, bats, you name it and I'll probably recognize it from a mile away), and old stuff nobody wants or uses anymore.</p>
+		<h1>What do you use to get stuff done?</h1>
+		<p><a href="stuffiuse.html">Here's a list.</a> </p>
+		<h1>Anything else?</h1>
+		<p>Yeah. Don't do drugs. </p>
+		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
 		
 		<!-- sideabr -->
 		<div class="main_thebar">
-		<!-- TemplateBeginEditable name="main_thebar" -->
-			This is also a placeholder.
-		<!-- TemplateEndEditable -->
+		<!-- InstanceBeginEditable name="main_thebar" -->
+		<p><img src="../media/pagespecific/about/me.png" alt="This is me" class="pixelme" width="100%"></p>
+		<p>That's me above this string of text... well... not exactly, but it's my persona that's loosely based on me. Same thing, right?</p>
+		<!-- InstanceEndEditable -->
 		</div>
 		<!-- end sideabr -->
 
@@ -114,4 +129,4 @@
 
 	</body>
 
-</html>
+<!-- InstanceEnd --></html>
