--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -57,7 +57,7 @@
 		<img src="media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
 		</picture>
 		
-		<div class="header_links"><a href="/">HOME</a> <a href="/art/">ART</a> <a href="/videos/">VIDEOS</a> <a href="/games/">GAMES</a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
+		<div class="header_links">NAV: <a href="/">HOME</a> <a href="/art/">ART</a> <a href="/videos/">VIDEOS</a> <a href="/games/">GAMES</a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
 		<!-- cool line-->
 		<img src="media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
 		</div>
@@ -77,16 +77,7 @@
 		<!-- your content goes here... -->
 		<div class="main_content">
 		<!-- InstanceBeginEditable name="main_content" -->
-			And... I'm still not done. Happy new year, though.<br>
-			<iframe width="314" height="321" scrolling="no" border="0"  
-		src="https://gifypet.neocities.org/pet/pet.html?name=the%20Blah%20Guy&dob=1735674906&gender=f&element=Earth&pet=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fblahpet.gif&map=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fmap.gif&background=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fspacers%2Fblackpixel.png&tablecolor=white&textcolor=white">
-		<!--useless fallback-->
-		<embed width="314" height="321" scrolling="no" border="0"
-		src="https://gifypet.neocities.org/pet/pet.html?name=the%20Blah%20Guy&dob=1735674906&gender=f&element=Earth&pet=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fblahpet.gif&map=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fgifypet%2Fmap.gif&background=https%3A%2F%2Fwww.rubberocket.com%2Fmedia%2Fspacers%2Fblackpixel.png&tablecolor=white&textcolor=white">
-		</embed>
-		<!--end fallback-->
-		</iframe>
-		<noscript>pretend there's a functioning tamagotchi above this string of text.</noscript>
+			And... I'm still not done. Happy new year, though.
 		<!-- InstanceEndEditable -->
 		</div>
 		<!-- your content dies here. -->
@@ -106,7 +97,7 @@
 		<div class="footer">
 		<hr>
 
-		Copyright &copy 2022-{YEAR HERE} Aleph Diallo. Some content may be licensed under the Creative Commons.
+		Copyright &copy; 2022-{YEAR HERE} Aleph Diallo. Some content may be licensed under the Creative Commons.
 
 		<hr>
 		
