--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -46,9 +46,8 @@
 		
 		<!-- banner -->
 		<picture>
-		<source srcset="media/sitegrfx/main/thumbwlogo.svg" alt="Aleph's Website Thumbs Up" class="header_img">
-		<img src="media/sitegrfx/main/thumbwlogo.png" alt="Aleph's Website Thumbs Up" class="header_img">
-		</picture>
+		<source srcset="/media/sitegrfx/main/thumbwlogo.svg" alt="Aleph's Website Thumbs Up" class="header_img">
+		<img src="/media/sitegrfx/main/thumbwlogo.png" alt="Aleph's Website Thumbs Up" width="2294" height="1669" class="header_img">		</picture>
 		<!-- end banner -->
 		
 		<!-- wordmark for smaller screens -->
