--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -88,11 +88,11 @@
 		<!-- InstanceBeginEditable name="main_content" -->
 		<h1>Art-View</h1>
 		<div class="thumbs">
-		<!-- latest. ill add pages for them later but for now they link to the piece -->
-			<img src="../media/art/2025/01_Jan/2025_01_01_emil/emil_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb">
-			<img src="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck_thumb.png" alt="Drippy's Server Invite Banner" titke="Drippy's Server Invite Banner" class="thumb">
-			<img src="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy_thumb.png" alt="The Blah Guy Sketches of '24" title="The Blah Guy Sketches of '24" class="thumb">
-			<img src="../media/art/2024/09_Sep/2024_09_24_conflict/conflict_thumb.png" alt="ELA Literary Device Assignment" title="ELA Literary Device Assignment" class="thumb">
+		<!-- latest. ill add pages for them later but for now they link to the piece's image -->
+			<a href="../media/art/2025/01_Jan/2025_01_01_emil/emil_init_design.png" target="_blank"><img src="../media/art/2025/01_Jan/2025_01_01_emil/emil_thumb.png" alt="Emil's initial design" title="Emil's initial design" class="thumb"></a>
+			<a href="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck.png" target="_blank"><img src="../media/art/2024/12_Dec/2024_12_26_boba/itscoffeedumbfuck_thumb.png" alt="Drippy's Server Invite Banner" titke="Drippy's Server Invite Banner" class="thumb"></a>
+			<a href="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy.png" target="_blank"><img src="../media/art/2024/11_Nov/2024_11_25_blah_guy/blahguy_thumb.png" alt="The Blah Guy Sketches of '24" title="The Blah Guy Sketches of '24" class="thumb"></a>
+			<a href="../media/art/2024/09_Sep/2024_09_24_conflict/conflict.png" target="_blank"><img src="../media/art/2024/09_Sep/2024_09_24_conflict/conflict_thumb.png" alt="ELA Literary Device Assignment" title="ELA Literary Device Assignment" class="thumb"></a>
 		<!-- oldest -->
 		</div>
 		<!-- InstanceEndEditable -->
