quick update pages that use template

--- a/sitedir/art/index.html
+++ b/sitedir/art/index.html
@@ -62,13 +62,13 @@
 		
 		<!-- wordmark for smaller screens -->
 		<picture>
-		<source srcset="media/logos/aw_wordmark.svg" alt="Aleph's Website" class="header_wordmark">
-		<img src="media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
+		<source srcset="/media/logos/aw_wordmark.svg" alt="Aleph's Website" class="header_wordmark">
+		<img src="/media/logos/aw_wordmark.png" alt="Aleph's Website" class="header_wordmark">
 		</picture>
 		
 		<div class="header_links">NAV: <a href="/">HOME</a> <a href="/art/">ART</a> <a href="/videos/">VIDEOS</a> <a href="/games/">GAMES</a> <a href="/chardata/">CHARACTERDATA</a> <a href="/downloads/">DOWNLOADS</a> <a href="/about/">ABOUT</a></div>
 		<!-- cool line-->
-		<img src="media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
+		<img src="../media/sitegrfx/main/rainbowline.png" width="100%" height="4" class="header_links_coolline pixelme">
 		</div>
 		<!--end header-->
 		</nav>
@@ -76,7 +76,7 @@
 		<hr>
 
 		<!-- under construction -->
-		<p align="center"><img src="media/gifsfromgeocities/construction.gif" alt="This site is under construction. Come back often." class="pixelme"></p>
+		<p align="center"><img src="/media/gifsfromgeocities/construction.gif" alt="This site is under construction. Come back often." class="pixelme"></p>
 		
 		<hr>
 
@@ -119,12 +119,12 @@
 		<hr>
 		
 		<!--the buttons-->
-		<img src="media/buttons/aleph8831.gif" alt="Aleph's Website button">
-		<a href="https://www.archive.org" target="_blank"><img src="media/buttons/internetarchive.gif" alt="Visit the Internet Archive!"></a>
-		<img src="media/buttons/mwm_dw_88x31.gif" alt="Code made with Macromedia Dreamweaver">
-		<img src="media/buttons/mwm_fw_88x31.gif" alt="Graphics made with Macromedia Fireworks">
-		<img src="media/buttons/made_with_windows.gif" alt="Made with Windows">
-		<img src="media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)">
+		<img src="/media/buttons/aleph8831.gif" alt="Aleph's Website button" class="pixelme">
+		<a href="https://www.archive.org" target="_blank"><img src="/media/buttons/internetarchive.gif" alt="Visit the Internet Archive!" class="pixelme"></a>
+		<img src="/media/buttons/mwm_dw_88x31.gif" alt="Code made with Macromedia Dreamweaver" class="pixelme">
+		<img src="/media/buttons/mwm_fw_88x31.gif" alt="Graphics made with Macromedia Fireworks" class="pixelme">
+		<img src="/media/buttons/made_with_windows.gif" alt="Made with Windows" class="pixelme">
+		<img src="/media/buttons/bestview.gif" alt="Best viewed with open eyes (redundant i know)" class="pixelme">
 
 		</div>
 		</div>
