--- a/sitedir/about/index.html
+++ b/sitedir/about/index.html
@@ -6,6 +6,9 @@
 	<title>About ::: Aleph's Website</title>
 	<!-- InstanceEndEditable -->
 
+	<!-- viewport for mobile devices -->
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<!-- seo stuff -->
 		<!-- InstanceBeginEditable name="SEOSTUF" -->
 			<meta name="title" content="(Almost) All About Aleph Diallo">
